--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,27 @@
 {
-  "env": {
-    "node": true,
-    "jest": true
-  },
-  "extends": ["eslint:recommended"],
-  "parserOptions": {
-    "ecmaVersion": 2021
-  },
-  "rules": {
-    "no-unused-vars": "warn",
-    "no-undef": "error"
+    "env": {
+      "node": true,
+      "jest": true,
+      "es2021": true
+    },
+    "extends": ["eslint:recommended"],
+    "parserOptions": {
+      "ecmaVersion": 2021,
+      "sourceType": "module"
+    },
+    "globals": {
+      "describe": "readonly",
+      "test": "readonly",
+      "it": "readonly",
+      "expect": "readonly",
+      "beforeEach": "readonly",
+      "afterEach": "readonly",
+      "beforeAll": "readonly",
+      "afterAll": "readonly"
+    },
+    "rules": {
+      "no-unused-vars": "warn",
+      "no-undef": "error",
+      "no-console": "off"
+    }
   }
-}
