--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -1,64 +1,40 @@
-name: Dependency Updates
+name: Test Dependency Updates
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
     paths:
       - 'package.json'
       - 'package-lock.json'
-  workflow_dispatch:
 
 jobs:
-  test-dependency-updates:
-    name: Test Dependency Updates
+  test:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '18'
           cache: 'npm'
-      
-      - name: Install dependencies
+
+      - name: Install
         run: npm ci
-      
-      - name: Run security audit
+
+      - name: Audit
         run: npm audit --audit-level=moderate
-        continue-on-error: true
-      
-      - name: Run tests with updated dependencies
+
+      - name: Test
         run: npm test
-      
-      - name: Run linter
-        run: npm run lint
-        continue-on-error: true
-      
-      - name: Check for breaking changes
-        run: |
-          echo "Checking dependency compatibility..."
-          npm outdated || echo "Some packages may have updates available"
-        continue-on-error: true
-      
-      - name: Add PR comment
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v6
+
+      - name: Comment
+        uses: actions/github-script@v7
         with:
           script: |
-            const body = `## Dependency Update Check ✅
-            
-            - Tests: ${{ job.status }}
-            - Security Audit: Completed
-            - Linting: Completed
-            
-            Please review the changes carefully before merging.`;
-            
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: body
+              body: 'Dependency update tests passed!'
             })
