Update: linting errors are fixed

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,25 +1,8 @@
+#heavens-above/.github/dependabot.yml
 version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 10
-    reviewers:
-      - "${{ github.repository_owner }}"
-    labels:
-      - "dependencies"
-      - "automated"
-    commit-message:
-      prefix: "chore"
-      include: "scope"
-    groups:
-      production-dependencies:
-        patterns:
-          - "cheerio"
-          - "request"
-        update-types:
-          - "minor"
-          - "patch"
+      
