--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,76 +1,64 @@
+# .github/workflows/ci.yml
 name: Continuous Integration
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main, master]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [main, master]
 
 jobs:
-  test:
-    name: Run Tests
+  prepare:
     runs-on: ubuntu-latest
-    
+    steps:
+      - uses: actions/checkout@v4
+      - name: Generate lockfile
+        run: npm i --package-lock-only
+      - uses: actions/upload-artifact@v4
+        with:
+          name: package-lock
+          path: package-lock.json
+
+  test:
+    needs: prepare
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x, 18.x]
-    
+        node: [18.x, 20.x]          # only current LTS + newest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run linter
-        run: npm run lint
-        continue-on-error: true
-      
-      - name: Run tests
-        run: npm test
-      
-      - name: Generate coverage report
-        run: npm run test:coverage
-        continue-on-error: true
-      
-      - name: Upload coverage to artifacts
-        uses: actions/upload-artifact@v4
-        if: always()
+          name: package-lock
+      - uses: actions/setup-node@v4
         with:
-          name: coverage-report-${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
+          cache: npm
+      - run: npm ci
+      - run: npm run lint
+      - run: npm test
+      - run: npm run test:coverage
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.node }}
           path: coverage/
           retention-days: 30
-  
+
   lint:
-    name: Lint Code
+    needs: prepare
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
-          node-version: '18.x'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run ESLint
-        run: npm run lint
-      
-      - name: Check code formatting
-        run: npm run lint
-        continue-on-error: false
+          name: package-lock
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: npm
+      - run: npm ci
+      - run: npm run lint -- --format stylish > lint.txt
+      - uses: actions/upload-artifact@v4
+        with:
+          name: lint-report
+          path: lint.txt
